# matchbook

./: .gitignore  DESIGN_GUIDE.md  DESIGN_UPDATES.md  MODERNIZATION_COMPLETE.md  MODERNIZATION_PLAN_V2.md  README.md  eslint.config.mjs  main.py  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: release.yml
config/: config.yaml
dist-electron/: main.js  preload.mjs
electron/: database.ts  main.ts  preload.ts
routes/: analysis_routes.py
src/: App.tsx  index.css  main.tsx  theme.ts
src/components/: FirstRunWizard.tsx  SplashScreen.tsx
src/lib/api/: tba.ts
src/lib/db/: collections.ts  database.ts
src/lib/db/hooks/: useRxCollection.ts  useRxDB.ts  useRxDocument.ts
src/lib/db/schemas/: assignments.schema.ts  devices.schema.ts  events.schema.ts  formSchemas.schema.ts  matches.schema.ts  scoutingData.schema.ts  scouts.schema.ts
src/lib/db/utils/: deviceId.ts  migrations.ts  syncHash.ts
src/lib/utils/: dates.ts  errorHandler.tsx
src/renderer/src/: App.tsx  index.css
src/renderer/src/components/: DatabaseInitScreen.tsx  FirstRunWizard.tsx
src/renderer/src/config/: routes.tsx
src/renderer/src/routes/: Analysis.tsx  Assignments.tsx  DeveloperTools.tsx  (+7 more)
src/routes/: DeviceSetup.tsx  EventManagement.tsx  Home.tsx  Settings.tsx
src/stores/: useDatabase.ts  useDeviceStore.ts  useEventStore.ts  useScoutingStore.ts
src/types/: database.d.ts  electron.d.ts  tba.d.ts
static/css/: app.css
static/js/: analyze.js  team_info.js
templates/: analyze.html
utils/: analysis_config.py  analysis_pipeline.py  csv_operations.py  team_analysis.py
